updae css for calendar block center alignment issue

--- a/packages/block-library/src/calendar/style.scss
+++ b/packages/block-library/src/calendar/style.scss
@@ -1,3 +1,6 @@
+.aligncenter.wp-block-calendar caption {
+    text-align: center;
+}
 .wp-block-calendar {
 	text-align: center;
 
